--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@devoxs/ati-doc-validator",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "Libreria de validacion de documentos oficiales del Ecuador",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -25,6 +25,7 @@
   "keywords": [
     "Ecuador",
     "cedula",
+    "RUC",
     "validacion",
     "Open Source"
   ],
