--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@devoxs/ati-doc-validator",
-  "version": "1.1.1",
+  "version": "2.1.0",
   "description": "Libreria de validacion de documentos oficiales del Ecuador",
-  "main": "lib/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
     "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
